--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DataBase": "Server=SP-1491004\\SQLSENAI; Database = ErpApiPederneiras; Integrated Security = True;TrustServerCertificate = True"
+    "DataBase": "Server=SP-1491037\\SQLSENAI; Database = APIprojetofinaljun; Integrated Security = True;TrustServerCertificate = True"
   },
   "AllowedHosts": "*"
 }
